--- a/frontend/src/assets/css/sidebar.css
+++ b/frontend/src/assets/css/sidebar.css
@@ -2,24 +2,26 @@
     position: absolute;
     height: 100%;
     width: 15%;
-    background-color: #9D3E83;
+    background-color: #ffffff;
     margin-top: 0px;
     font-size: smaller;
+    color: #3700ff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     
     /* padding: 20px; */
   }
   
   .sidebar a {
     display: block;
-    color: #ffffff;
+    color: #3700ff;
     padding: 20px;
     width: 100%;
     text-decoration: none;
   }
   
   .sidebar a:hover {
-    background-color: #ffffff;
-    color: #9D3E83;
+    background-color: #3700ff;
+    color: #ffffff;
     width: 100%;
     margin-left: 0px;
   }
@@ -33,7 +35,7 @@
   
   .Link a {
     display: block;
-    color: #ffffff;
+    color: #3700ff;
     padding: 20px;
     width: 100%;
     text-decoration: none;
