--- a/frontend/src/assets/css/sidebar.css
+++ b/frontend/src/assets/css/sidebar.css
@@ -1,12 +1,13 @@
 .sidebar {
     position: absolute;
-    height: 100%;
+    height: 90%;
     width: 15%;
     background-color: #ffffff;
     margin-top: 0px;
     font-size: smaller;
     color: #3700ff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.2);
+
     
     /* padding: 20px; */
   }
