--- a/frontend/src/assets/css/sidebar.css
+++ b/frontend/src/assets/css/sidebar.css
@@ -1,65 +1,62 @@
 .sidebar {
-    position: absolute;
-    height: 90%;
-    width: 15%;
-    background-color: #ffffff;
-    margin-top: 0px;
-    font-size: smaller;
-    color: #3700ff;
-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  height: 90%;
+  width: 15%;
+  background-color: #ffffff;
+  margin-top: 0px;
+  font-size: smaller;
+  color: #3b71ca;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
 
-    
-    /* padding: 20px; */
-  }
-  
-  .sidebar a {
-    display: block;
-    color: #3700ff;
-    padding: 20px;
-    width: 100%;
-    text-decoration: none;
-  }
-  
-  .sidebar a:hover {
-    background-color: #3700ff;
-    color: #ffffff;
-    width: 100%;
-    margin-left: 0px;
-  }
-  
-  .sidebar a.active {
-    background-color: #ffffff;
-    color: #9D3E83;
-    width: 100%;
-    margin-left: 0px;
-  }
-  
-  .Link a {
-    display: block;
-    color: #3700ff;
-    padding: 20px;
-    width: 100%;
-    text-decoration: none;
-  }
-  
-  .Link a:hover {
-    background-color: #ffffff;
-    color: #9D3E83;
-    width: 100%;
-    margin-left: 0px;
-  }
-  
-  .Link a.active {
-    background-color: #ffffff;
-    color: #9D3E83;
-    width: 100%;
-    margin-left: 0px;
-  }
-  
-  .iconSize {
-    margin-right: 20px;
-  }
-  
-  .logOut {
-    margin-top: 350px;
-  }
+.sidebar a {
+  display: block;
+  color: #3b71ca;
+  padding: 20px;
+  width: 100%;
+  text-decoration: none;
+}
+
+.sidebar a:hover {
+  background-color: #3b71ca;
+  color: #ffffff;
+  width: 100%;
+  margin-left: 0px;
+}
+
+.sidebar a.active {
+  background-color: #ffffff;
+  color: #9D3E83;
+  width: 100%;
+  margin-left: 0px;
+}
+
+.Link a {
+  display: block;
+  color: #3b71ca;
+  padding: 20px;
+  width: 100%;
+  text-decoration: none;
+}
+
+.Link a:hover {
+  background-color: #ffffff;
+  color: #9D3E83;
+  width: 100%;
+  margin-left: 0px;
+}
+
+.Link a.active {
+  background-color: #ffffff;
+  color: #9D3E83;
+  width: 100%;
+  margin-left: 0px;
+}
+
+.iconSize {
+  margin-right: 20px;
+}
+
+.logOut {
+  margin-top: 350px;
+}
