--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -1,5 +1,5 @@
 .main {
-  margin-left: 15%;
+  margin-left: 16%;
   padding: 0px 10px;
   background-color: #ffffff;
   color: #3b71ca;
@@ -10,6 +10,8 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   margin-top: 1%;
+  z-index: 1;
+  position: relative;
 }
 
 .formContainer {
@@ -24,7 +26,7 @@
 }
 
 .mainPart{
-  margin-left: 15%;
+  margin-left: 16%;
   padding: 0px 10px;
   background-color: #ffffff;
   color: #464e5c;
@@ -35,13 +37,15 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   margin-top: 1%;
+  z-index: 1;
+  position: relative;
 }
 
 
 /* genarate question main */
 .genarateQuestionMain {
   padding-right: 15%;
-  margin-left: 15%;
+  margin-left: 16%;
   padding: 0px 10px;
   background-color: #ffffff;
   color: #464e5c;
@@ -51,6 +55,8 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   margin-top: 1%;
+  z-index: 1;
+  position: relative;
 }
 
 /* genarate paper Question Box */
@@ -66,3 +72,39 @@
   align-items: center; /* Center vertically */
   margin-bottom: 48px;
 }
+
+
+/* style check box */
+
+.checkbox-container {
+  position: relative;
+  display: inline-block;
+}
+
+.checkbox-container input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox-container .custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ccc;
+  border-radius: 3px;
+}
+
+.checkbox-container input[type="checkbox"]:checked + .custom-checkbox:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  background-color: #007bff;
+  border-radius: 2px;
+}
+
