--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -108,3 +108,27 @@
   border-radius: 2px;
 }
 
+
+/* style side scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  z-index: 1;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#5e89cd;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
